tests/parser/good/arithmetic.gbl
fn f() {
	var a = 1 + 2;
	var b = 3 - 1;
	var c = 2 * 4;
	var d = 8 / 2;
	var e = 1 + 2 * 3 - 4 / 2;
}
