tests/parser/errors/loop_no_lbrace.gbl
fn f() {
	loop var a = 1;
}
